--- a/resources/public/css/teibp.css
+++ b/resources/public/css/teibp.css
@@ -1833,7 +1833,10 @@ a:hover {
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
-  width: 23em;
+  width: 30em;
+}
+#sidebar textarea {
+width: 30.5em;
 }
 #teibpToolbox h1 {
   font-weight: bold;
