Started adding indexTerm handlers to CSS.

--- a/resources/public/css/teibp.css
+++ b/resources/public/css/teibp.css
@@ -844,6 +844,12 @@ incipit {
 index {
   /* Empty Rule Set */
 }
+indexTerm[index="volume"] {
+  content: attr(level1) '-';
+}
+indexTerm[index="segnum"] {
+  content: attr(level1);
+}
 institution {
   /* Empty Rule Set */
 }
